area of interest alignment  fixed

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -6748,7 +6748,7 @@ label.required:after {
     display: block;
     margin-top: 8px;
 }
-ul.interest-area { list-style-type: none; margin: 0px; padding: 0px;}
+ul.interest-area { list-style-type: none; margin:5px 0 0 0; padding: 0px;}
 ul.interest-area li{ display: block; float: left; margin-right: 4px; width: 100px; padding-left: 20px; position: relative;}
 ul.interest-area li input[type="checkbox"]{ position: absolute; left: 0px; }
 li.current-page i{color:#1ABB9C;}
